# metadata_server

./: .gitignore  .yamllint  Dockerfile  README.md  docker-compose.yml  metadata_client.yaml  mypy.ini  pytest.ini  requirements-build-client.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_docker_image_with_env_variable_args_in_github.yml  build_openapi_client_publish.yml  build_openapi_client_store_in_github.yml  ci.yml  ci_cd.yml  component_tests.yml  openapi_validation.yml  openapi_validation_workflow.yml  static_code_analysis.yml  tests.yml  unit_tests_on_docker.yml
dp-client/: README.md  pyproject.toml  requirements.txt
dp-client/dp_client/: __init__.py  client.py
dp-client/dp_client/api/: __init__.py  health.py  users.py
dp-client/dp_client/clients/: __init__.py  metadata.py
dp-client/dp_client/db/: __init__.py  pg.py
dp-client/dp_client/db/drivers/: postgres.py
scripts/: build_and_install_dp_client.sh  build_and_install_open_api_client.sh  build_dp_client.sh  build_open_api_client.sh  install_all_requirements.sh  precommit.sh  start_server_in_container.sh  validate_open_api_file_up_to_date.sh  verify_open_api_client_is_up_to_date.sh
src/: api_spec_hash.md5  manage.py  open_api_spec.yml  tools.py
src/metadata_manager/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/server/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/component/: conftest.py  test_user_model_component.py
tests/metadata_manager/: test_user_model.py
tests/unit/: test_user_model.py
(+5 files in other folders)
