[tool.poetry]
name = "dp-client"
version = "0.0.0"  # overwritten by build script
description = "Unified test-friendly client for platform interactions."
authors = ["Your Team <team@example.com>"]
packages = [{ include = "dp_client" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# This will be rewritten by the build script to an exact version from setup.py
metadata-client = "*"
psycopg2-binary = ">=2.9,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
